[Feat]: Nuevo manejo de endpoints para la tabla intermedia profile_announcement y mejor manejo en endpoints de userProfile
